Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
   <meta name="robots" content="index, follow">
   <link rel="stylesheet" href="style.css">
   <title>FreeFireStore | Vendas de Contas Free Fire</title>
+
+
+<script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+<script>
+  window.OneSignalDeferred = window.OneSignalDeferred || [];
+  OneSignalDeferred.push(async function(OneSignal) {
+    await OneSignal.init({
+      appId: "23359172-f65a-4ec9-bd2a-38309613e921",
+    });
+  });
+</script>
 </head>
 <body>
   <header>
