Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:image" content="Banner.png">
+  <meta property="og:image" content="https://i.imgur.com/p6els6B.jpeg">
   <meta name="description" content="FreeFireStore - Compre contas de Free Fire com segurança e preços justos. Nosso site está em construção e será lançado em breve.">
   <meta name="keywords" content="Free Fire, Vendas de Contas, Comprar Contas Free Fire, Free Fire Contas Seguras, Free Fire Store">
   <meta name="author" content="FreeFireStore">
