Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <meta name="author" content="FreeFireStore">
   <meta name="robots" content="index, follow">
   <link rel="stylesheet" href="style.css">
+<link rel="manifest" href="app.json">
+
   <title>FreeFireStore | Vendas de Contas Free Fire</title>
 
 
